Created UML, Edit Readme file and etc.